pkg/deps/testdata/ub/manifest/invalid/bad-toolchain-version.ub
manifest: {
  unobin-version: 'latest'
  requires: {}
}
